Atualização index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 name="description"
 content="Music box criado para a matéria de pesquisa e inovação dasptech"
 />
-<title>Music Box</title>
+<title>Paralelo 19</title>
 </head>
 <body>
 <noscript>Você precisa habilitar o JavaScript da página.</noscript>
