Separação de pastas + botão como componente.

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="theme-color" content="#000000" />
-<meta
-name="description"
-content="Music box criado para a matéria de pesquisa e inovação dasptech"
-/>
-<title>Paralelo 19</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Sistema de geração de estoque" />
+    <title>Paralelo 19</title>
 </head>
+
 <body>
-<noscript>Você precisa habilitar o JavaScript da página.</noscript>
-<div id="root"></div>
+    <noscript>Você precisa habilitar o JavaScript da página.</noscript>
+    <div id="root"></div>
 </body>
+
 </html>
