275 Adição do ícone na aba.

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#22333B" />
     <meta name="description" content="Sistema de geração de estoque" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Paralelo 19</title>
 </head>
 
